@@ -1,3 +1,8 @@
+2008-07-10  Dan Nicolaescu  <dann@ics.uci.edu>
+
+	* configure.in: Use macppc for Darwin.
+	* configure: Regenerate.
+
 2008-07-05  Glenn Morris  <rgm@gnu.org>
 
 	* make-dist (EMACS): Doc fix.
